html/style/main.css
body {
  margin: 0px;
}

#background {
  background-blend-mode: multiply;
  background: #ccc url('../img/backgroundstripes.png');
  background-size: 100%;
  background-attachment: fixed;
  width: 100%;
  min-height: 100%;
  overflow: hidden;
  position: fixed;
  top: 0;
  z-index: -1;
}

#content {
  width: 1000px;
  max-width: 100%;
  margin-left: auto;
  margin-right: auto;
  font-family: sans-serif;
  padding: 23px 0;
}

a {
  color: #333;
}

a:hover {
  color: #888;
}

#navbar {
  display: block;
  padding-left: 0;
  margin: 0;
  padding-bottom: 5px;
  margin-top: -8px;
  margin-left: -2px;
}

#navbar li {
  display: inline-block;
  list-style-type: none;
  padding-left: 0px;
  margin-left: 0px;
  border: 1px solid black;
  background: #ddd;
  cursor: pointer;
  margin-bottom: 8px;
  vertical-align: top;
  padding: 4px;
}

#navbar li.selected {
  font-weight: bold;
  background: #fff;
  padding-top: 8px;
  margin-bottom: 0px;
  border-radius: 0px 0px 6px 6px;
  border-bottom: 2px solid black;
}

#navbar a {
  color: inherit;
  text-decoration: none;
}

#main {
  background: #eee;
  position: relative;
  padding: 10px;
  padding-top: 0;
  border: 1px solid #999;
}

span.ingredient {
  width: 68px;
  height: 68px;
  display: inline-block;
  margin: 0px;
  margin-right: 5px;
  overflow: hidden;
  cursor: pointer;
  background: url('../img/background.png') top left no-repeat;
  position: relative;
}

span.ingredient img {
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  width: 64px;
  height: 64px;
  margin-left: -32px;
  margin-top: -32px;
  border: none;
}

.searchselector {
  display: inline-block;
  padding: 0px 0px 0px 2px;
  line-height: 22px;
  vertical-align: bottom;
  border: 1px solid #999;
  border-right: none;
  height: 100%;
  background: #ccc;
  background: linear-gradient(to top, rgba(170, 170, 170, 1) 0%,rgba(170, 170, 170, 0) 50%);
  background: -webkit-linear-gradient(to top, rgba(170, 170, 170, 1) 0%,rgba(170, 170, 170, 0) 50%);
  background: -moz-linear-gradient(to top, rgba(170, 170, 170, 1) 0%,rgba(170, 170, 170, 0) 50%);
  background: -webkit-gradient(linear, left bottom, left top, color-stop(0%,rgba(170,170,170,1)), color-stop(50%,rgba(170,170,170,0)));
  border-radius: 3px 0px 0px 3px;
  transition: border-bottom-left-radius 100ms ease;
  cursor: pointer;
}

.searchselector.retracted:after {
  content: '';
  margin-left: 3px;
  margin-right: 2px;
  width: 0;
  height: 0;
  display: inline-block;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-top: 5px solid #444;
  margin-bottom: 2px;
}

.searchselector.extended:after {
  content: '';
  margin-left: 3px;
  margin-right: 2px;
  width: 0;
  height: 0;
  display: inline-block;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-bottom: 5px solid #444;
  margin-bottom: 2px;
}

.searchselector:active {
  background-color: #777;
}

.searchdropdown {
  z-index: 2;
  position: absolute;
  height: 0px;
  overflow: hidden;
  border-radius: 0px 0px 3px 3px;
  transition: height 200ms ease, border-top-left-radius 100ms ease;
  border-top-left-radius: 3px;
}

.searchdropdown div {
  background: #ccc;
  border: 1px solid #888;
  border-top: none;
  cursor: pointer;
  padding: 0px 2px 0px 2px;
}

.ingredientpicker {
  border: 1px solid #888;
  padding: 3px;
  height: 12pt;
  border-radius: 0px 4px 4px 0px;
}

#results {
  overflow: scroll;
}

.ingredientpicker:hover {
  border: 1px solid #aaa;
}

.ingredientdropdown {
  display: block;
  z-index: 1;
}

.ingredientdropdown div {
  margin: 0px;
  padding: 0px;
  margin-bottom: 4px;
  text-align: justify;
}

.ingredientdropdown div .item {
  border: 1px solid #bbb;
  font-size: 8pt;
  padding-top: 2px;
  white-space: nowrap;
  text-align: center;
  line-height: 14px;
  display: inline-block;
  vertical-align: top;
  padding-left: 1px;
  overflow: hidden;
  padding-right: 1px;
  margin: 1px;
  list-style-type: none;
  cursor: pointer;
  border-radius: 4px;
  background: #ddd;
  background: linear-gradient(to bottom, #dddddd 0%,#cccccc 2px,#cccccc 60%,#bbbbbb 85%,#888888 100%);
  background: -moz-linear-gradient(to bottom, #eeeeee 0%,#dddddd 8%,#dddddd 60%,#cccccc 85%);
  background: -webkit-linear-gradient(to bottom, #eeeeee 0%,#dddddd 8%,#dddddd 60%,#cccccc 85%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #eeeeee),color-stop(8%, #dddddd),color-stop(60%, #dddddd),color-stop(85%, #cccccc));
}

.ingredientdropdown span img {
  margin-left: auto;
  margin-right: auto;
  width: 20px;
  height: 20px;
  display: block;
}

.ingredientdropdown span:hover {
  background: #eee;
  background: linear-gradient(to bottom, #ffffff 0%,#d8d8d8 2px,#d8d8d8 60%,#c8c8c8 85%,#aaaaaa 100%);
  background: -moz-linear-gradient(to bottom, #ffffff 0%,#d8d8d8 2px,#d8d8d8 60%,#c8c8c8 85%,#aaaaaa 100%);
  background: -webkit-linear-gradient(to bottom, #ffffff 0%,#d8d8d8 2px,#d8d8d8 60%,#c8c8c8 85%,#aaaaaa 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff),color-stop(2px, #d8d8d8),color-stop(60%, #d8d8d8),color-stop(85%, #c8c8c8),color-stop(100%, #aaaaaa));
}

.ingredientdropdown span:active {
  background: #fff;
  background: linear-gradient(to bottom, #ffffff 0%,#d5d5d5 2px,#ffffff 60%,#dddddd 85%,#aaaaaa 100%);
  background: -moz-linear-gradient(to bottom, #ffffff 0%,#d5d5d5 2px,#ffffff 60%,#dddddd 85%,#aaaaaa 100%);
  background: -webkit-linear-gradient(to bottom, #ffffff 0%,#d5d5d5 2px,#ffffff 60%,#dddddd 85%,#aaaaaa 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff),color-stop(2px, #d5d5d5),color-stop(60%, #ffffff),color-stop(85%, #dddddd),color-stop(100%, #aaaaaa));
}
/* ... */

